adding search bar for module info

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 						<h6> Here is the message area. </h6>
 					</div>
 					<div class="module-table">
-						<h2 class="remove-me"> Here is the module table. </h2>
+						<h2>  Here is the module table. </h2>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-3" id="module-info">
-				<h2> Here is the module information. </h2>
+				<h2 class="remove-me"> Here is the module information. </h2>
 			</div>
 		</div>
 	</div> 
