search bar is functional

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						<h6> Here is the message area. </h6>
 					</div>
 					<div class="module-table">
-						<h2>  Here is the module table. </h2>
+						<h2 class="remove-me-module-table">  Here is the module table. </h2>
 					</div>
 				</div>
 			</div>
@@ -33,6 +33,8 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
+
+	<script src="libs/typeahead.bundle.js"></script>
 
 	<!--<script data-main="scripts/main" src="scripts/common/require.js"></script>-->
 	
