completed module table basic function

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<title> NUSProgressBar - A Module Planning Tool </title>
 	<link rel="stylesheet" href="styles/main.css">
-	<!--Bootstrap 4 -->
+<!-- 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/tether/1.3.1/js/tether.min.js" />
+ -->	<!--Bootstrap 4 -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script> 
 </head>
@@ -19,7 +20,7 @@
 					<div class="message-area">
 						<h6> Here is the message area. </h6>
 					</div>
-					<div class="module-table">
+					<div id="module-table">
 						<h2 class="remove-me-module-table">  Here is the module table. </h2>
 					</div>
 				</div>
