popup window, programme reader and css

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 	<!-- main container -->
 	<div class="container-fuild">
 		<div class="row">
+			<div class="col-md-3">
+				<div class="logo">
+				</div>
+				<div id="module-info">
+					<h2 class="remove-me"> Here is the module information. </h2>
+				</div>
+			</div>
 			<div class="col-md-9">
 				<div id="primary-plan">
 					<div class="progress-bar">
@@ -25,9 +32,9 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-3" id="module-info">
+<!-- 			<div class="col-md-3" id="module-info">
 				<h2 class="remove-me"> Here is the module information. </h2>
-			</div>
+			</div> -->
 		</div>
 	</div> 
 	<!-- end main container -->
