--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<div class="row">
 			<div class="col-md-3">
 				<div class="logo">
+					<img src="./images/logo2.png" id="logo-image">
 				</div>
 				<div id="module-info">
 					<h2 class="remove-me"> Here is the module information. </h2>
@@ -21,8 +22,8 @@
 			</div>
 			<div class="col-md-9">
 				<div id="primary-plan">
-					<div class="progress-bar">
-						<h2> Here is the progress bar. </h2>
+					<div id="progress-bar">
+						<h2 class="remove-me-progress-bar"> Here is the progress bar. </h2>
 					</div>
 					<div class="message-area">
 						<h6> Here is the message area. </h6>
