added progress bar

--- a/index.html
+++ b/index.html
@@ -9,9 +9,30 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script> 
 </head>
 <body>
+	<a data-target="#myModal" role="button" class="btn" data-toggle="modal">Choose your programme</a>
+	<div class="modal fade hide" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	  <div class="modal-header">
+	    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+	    <h3 id="selector-head">Programme selector</h3>
+	  </div>
+	  <div class="modal-body">NIL
+	       <select id="programme-choice">
+	          <option value="NIL">Applied Mathematics with no specialisation</option>
+	          <option value="Mathematical Modelling and Data Analytics">Applied Mahtematics (Mathematical Modelling and Data Analytics)</option>
+	          <option value="Operations Research and Financial Mathematics">Applied Mahtematics (Operations Research and Financial Mathematics)</option>
+	      </select>
+	  </div>
+	  <div class="modal-footer">
+	    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+	    <button class="btn btn-primary" id="save-programme">Save changes</button>
+	  </div>
+	</div>
+
 	<!-- main container -->
 	<div class="container-fuild">
 		<div class="row">
+			<div class="col-md-1">
+			</div>
 			<div class="col-md-3">
 				<div class="logo">
 					<img src="./images/logo2.png" id="logo-image">
@@ -20,13 +41,13 @@
 					<h2 class="remove-me"> Here is the module information. </h2>
 				</div>
 			</div>
-			<div class="col-md-9">
+			<div class="col-md-8">
 				<div id="primary-plan">
 					<div id="progress-bar">
 						<h2 class="remove-me-progress-bar"> Here is the progress bar. </h2>
 					</div>
 					<div class="message-area">
-						<h6> Here is the message area. </h6>
+						<h6> Here is the message area. (coming soon...) </h6>
 					</div>
 					<div id="module-table">
 						<h2 class="remove-me-module-table">  Here is the module table. </h2>
