--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 						    </div>
 						</div>
 					</div>
-					<div class="message-area">
+					<div id="message-area">
 						<h6> Here is the message area. (coming soon...) </h6>
 					</div>
 					<div id="module-table">
