Create a popup window of Warning

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	</div>
 
 	<!-- main container -->
-	<div class="container-fuild">
+	<div classer="contain-fuild">
 		<div class="row">
 			
 			<div class="col-md-3">
@@ -55,7 +55,7 @@
 						        <select id="department-choice"></select>
 						        <h5>Choose your programme</h5>
 						        <select id="programme-choice"></select>
-						        <h5>Choose your specialisationg</h5>
+						        <h5>Choose your specialisation</h5>
 						        <select id="specialisation-choice"></select>
 						        <button class="btn hide-programme" data-dismiss="modal" aria-hidden="true">Close</button>
 	    						<button class="btn btn-primary" id="save-programme">Save changes</button>
@@ -69,13 +69,21 @@
 					<div id="module-table">
 						<h2 class="remove-me-module-table">  Here is the module table. </h2>
 					</div>
+
+                    <!--Warning Window-->
+					<div class="warning-popup">
+					    <div class="warning-popup-inner">
+                            <h2>Thank you for visiting our website</h2>
+                            <h3>We are still developing the website</h3>
+                            <button class="warning-close">Close</button>
+					    </div>
+					</div>
+
 				</div>
 			</div>
-
-		</div>
-	</div> 
+       	</div> 
 	<!-- end main container -->
-
+	
 	<!-- jquery -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
