amendation to the warning-window

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	</div>
 
 	<!-- main container -->
-	<div classer="contain-fuild">
+	<div classer="container-fuild">
 		<div class="row">
 			
 			<div class="col-md-3">
@@ -71,17 +71,19 @@
 					</div>
 
                     <!--Warning Window-->
-					<div class="warning-popup">
-					    <div class="warning-popup-inner">
+					<div class="popup" id ="warning-popup">
+					    <div class="popup-inner" id="warning-popup-inner">
                             <h2>Thank you for visiting our website</h2>
-                            <h3>We are still developing the website</h3>
-                            <button class="warning-close">Close</button>
+                            <h3>We are still developing it.</h3>
+                            <button class="popup-close" id="warning-close">Close</button>
 					    </div>
 					</div>
-
-				</div>
+					
+	     		</div>
 			</div>
-       	</div> 
+		</div>
+	</div>
+
 	<!-- end main container -->
 	
 	<!-- jquery -->
