--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	</div>
 
 	<!-- main container -->
-	<div classer="container-fuild">
+	<div class="container-fuild">
 		<div class="row">
 			
 			<div class="col-md-3">
@@ -85,7 +85,48 @@
 	</div>
 
 	<!-- end main container -->
-	
+
+	<!--Footer-->
+	<footer class="footer-container">
+        <div class="container-fluid">
+            <div class="row footer">
+
+
+              <div class="col-md-10 col-md-offset-1" id="copyright">
+                <p>Copyright &copy; 2016 | NUSProgressBar. All rights reserved.</p>
+              </div>
+              <div id="footer-link">
+	              <div class="row">
+				    <div class="col-sm-4">
+				      <h5 class="section-title">About</h5>
+	                  <ul id="footer-list">
+	                      <li><a href="">API</a></li>
+	                  </ul>
+				    </div>
+
+				    <div class="col-sm-4">
+				      <h5 class="section-title">Contact</h5>
+		              <ul id="footer-list">
+		                  <li><a href="">Email</a></li>
+		              </ul>
+				    </div>
+
+				    <div class="col-sm-4">
+				      <h5 class="section-title">Useful Links</h5>
+	                  <ul id="footer-list">
+	                      <li><a href="https://nusmods.com/">NUSmods</a></li>
+	                      <li><a href="http://nusmathsoc.org/">NUS Math Society</a></li>
+	                      <li><a href="https://www.facebook.com/nuswhispers/">NUSWhispers</a></li>
+	                  </ul>  
+				    </div>
+			   </div>
+
+            </div>
+        </div>
+
+      </footer>
+
+
 	<!-- jquery -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
