Updated the footer

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 				      <h5 class="section-title">About</h5>
 	                  <ul id="footer-list">
 	                      <li><a href="">API</a></li>
+	                      <li>Sponsor: <a href="http://nusmathsoc.org/">NUS Math Society</a></li>
 	                  </ul>
 				    </div>
 
@@ -115,7 +116,6 @@
 				      <h5 class="section-title">Useful Links</h5>
 	                  <ul id="footer-list">
 	                      <li><a href="https://nusmods.com/">NUSmods</a></li>
-	                      <li><a href="http://nusmathsoc.org/">NUS Math Society</a></li>
 	                      <li><a href="https://www.facebook.com/nuswhispers/">NUSWhispers</a></li>
 	                  </ul>  
 				    </div>
