Modified Search Bar and Save Changes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	  </div>
 	  <div class="modal-footer">
 	    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-	    <button class="btn btn-primary" id="save-programme">Save changes</button>
+	    <button class="btn btn-primary" id="save-programme" data-dismiss="modal" aria-hidden="true">Save changes</button>
 	  </div>
 	</div>
 
@@ -58,7 +58,7 @@
 						        <h5>Choose your specialisation</h5>
 						        <select id="specialisation-choice"></select>
 						        <button class="btn hide-programme" data-dismiss="modal" aria-hidden="true">Close</button>
-	    						<button class="btn btn-primary" id="save-programme">Save changes</button>
+	    						<button class="btn btn-primary hide-programme" id="save-programme">Save changes</button>
 						        <a class="popup-close hide-programme" id="hide-programme-button" data-popup-close="popup-programme" href="#">x</a>
 						    </div>
 						</div>
