--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 						<a class="btn" id="programme-selecter" data-popup-open="popup-programme" href="#">choose programme</a>
 						<div class="popup" data-popup="popup-programme">
 						    <div class="popup-inner" id="programme-selector-area">
+						    	<h5>Choose your year of matriculation</h5>
+						    	<select id="AY-choice">click to choose</select>
 						    	<h5>Choose your faculty</h5>
 						        <select id="faculty-choice"></select>
 						        <h5>Choose your department</h5>
