--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script> 
 </head>
 <body>
-	<a data-target="#myModal" role="button" class="btn" data-toggle="modal">Choose your programme</a>
+	<!-- <a data-target="#myModal" role="button" class="btn" data-toggle="modal">Choose your programme</a>
 	<div class="modal fade hide" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 	  <div class="modal-header">
 	    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
@@ -26,7 +26,7 @@
 	    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
 	    <button class="btn btn-primary" id="save-programme" data-dismiss="modal" aria-hidden="true">Save changes</button>
 	  </div>
-	</div>
+	</div> -->
 
 	<!-- main container -->
 	<div class="container-fuild">
