added a temporary clear button, local storage for programme

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 					</div>
 					<div id="button-area">
 						<a class="btn" id="programme-selecter" data-popup-open="popup-programme" href="#">choose programme</a>
+						<a id = "memory">clear memory</a>
 						<div class="popup" data-popup="popup-programme">
 						    <div class="popup-inner" id="programme-selector-area">
 						    	<h5>Choose your year of matriculation</h5>
