try to resolve conflict

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					</div>
 					<div id="button-area">
 						<a class="btn" id="programme-selecter" data-popup-open="popup-programme" href="#">choose programme</a>
-						<a id = "memory">clear memory</a>
+						<a id = "memory"> Reset</a>
 						<div class="popup" data-popup="popup-programme">
 						    <div class="popup-inner" id="programme-selector-area">
 						    	<h5>Choose your year of matriculation</h5>
@@ -83,7 +83,7 @@
 				    <div class="col-sm-4">
 				      <h5 class="section-title">About</h5>
 	                  <ul id="footer-list">
-	                      <li><a href="">API</a></li>
+	                      <li><a href="https://github.com/ExceptionOverflow/nusProgressBar">Resource</a></li>
 	                      <li>Sponsor: <a href="http://nusmathsoc.org/">NUS Math Society</a></li>
 	                  </ul>
 				    </div>
@@ -91,7 +91,7 @@
 				    <div class="col-sm-4">
 				      <h5 class="section-title">Contact</h5>
 		              <ul id="footer-list">
-		                  <li><a href="">Email</a></li>
+		                  <li>Email: nusprogressbar@gmail.com</li>
 		              </ul>
 				    </div>
 
