--- a/index.html
+++ b/index.html
@@ -13,23 +13,9 @@
 	<!-- main container -->
 	<div class="container-fuild">
 		<div class="row">
-			
-			<div class="col-md-3">
-				<div class="logo">
-					<img src="./images/logo2.png" id="logo-image">
-				</div>
-				<div id="module-info">
-					<h2 class="remove-me"> Here is the module information. </h2>
-				</div>
-			</div>
-			<div class="col-md-9">
-				<div id="primary-plan">
-					<div id="progress-bar">
-						<h2 class="remove-me-progress-bar"> Here is the progress bar. </h2>
-					</div>
-					<div id="button-area">
-						<a class="btn" id="programme-selecter" data-popup-open="popup-programme" href="#">choose programme</a>
-						<a id = "memory"> Reset</a>
+			<div id="button-area">
+						<a class="btn btn-primary" id="programme-selecter" data-popup-open="popup-programme" href="#">choose programme</a>
+						<a class="btn btn-primary" id = "memory"> Reset</a>
 						<div class="popup" data-popup="popup-programme">
 						    <div class="popup-inner" id="programme-selector-area">
 						    	<h5>Choose your year of matriculation</h5>
@@ -48,6 +34,24 @@
 						    </div>
 						</div>
 					</div>
+		</div>
+		<div class="row">
+			<!-- <div class="col-md-1"></div> -->
+			<div class="col-md-4">
+				<div class="logo">
+					<img src="./images/logo2.png" id="logo-image">
+				</div>
+				<div id="module-info">
+					<h2 class="remove-me"> Here is the module information. </h2>
+				</div>
+			</div>
+			<div class="col-md-8">
+				<div id="primary-plan">
+					
+					<div id="progress-bar">
+						<h2 class="remove-me-progress-bar"> Here is the progress bar. </h2>
+					</div>
+					
 					<div id="message-area">
 					</div>
 					<div id="module-table">
