modified the css

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	<div class="container-fuild">
 		<div class="row">
 			<div id="button-area">
-						<a class="btn btn-primary" id="programme-selecter" data-popup-open="popup-programme" href="#">choose programme</a>
-						<a class="btn btn-primary" id = "memory"> Reset</a>
+						<a class="btn btn-info-outline" id="programme-selecter" data-popup-open="popup-programme" href="#">Choose Programme</a>
+						<a class="btn btn-info-outline" id = "memory"> Reset</a>
 						<div class="popup" data-popup="popup-programme">
 						    <div class="popup-inner" id="programme-selector-area">
 						    	<h5>Choose your year of matriculation</h5>
@@ -37,9 +37,9 @@
 		</div>
 		<div class="row">
 			<!-- <div class="col-md-1"></div> -->
-			<div class="col-md-4">
+			<div class="col-md-3">
 				<div class="logo">
-					<img src="./images/logo2.png" id="logo-image">
+					<div id="logo-image">NUS<span id='logo-highlight'>PROGRESS</span>BAR</div>
 				</div>
 				<div id="module-info">
 					<h2 class="remove-me"> Here is the module information. </h2>
@@ -80,7 +80,7 @@
 
 
               <div class="col-md-10 col-md-offset-1" id="copyright">
-                <p>Copyright &copy; 2016 | NUSProgressBar. All rights reserved.</p>
+                 <p>Copyright &copy; 2016 | NUSProgressBar. All rights reserved.</p>
               </div>
               <div id="footer-link">
 	              <div class="row">
