--- a/index.html
+++ b/index.html
@@ -14,48 +14,48 @@
 	<div class="container-fuild">
 		<div class="row">
 			<div id="button-area">
-						<a class="btn btn-info-outline" id="programme-selecter" data-popup-open="popup-programme" href="#">Choose Programme</a>
-						<a class="btn btn-info-outline" id = "memory"> Reset</a>
-						<div class="popup" data-popup="popup-programme">
-						    <div class="popup-inner" id="programme-selector-area">
-						    	<h5>Choose your year of matriculation</h5>
-						    	<select id="AY-choice">click to choose</select>
-						    	<h5>Choose your faculty</h5>
-						        <select id="faculty-choice"></select>
-						        <h5>Choose your department</h5>
-						        <select id="department-choice"></select>
-						        <h5>Choose your programme</h5>
-						        <select id="programme-choice"></select>
-						        <h5>Choose your specialisation</h5>
-						        <select id="specialisation-choice"></select>
-						        <button class="btn hide-programme" data-dismiss="modal" aria-hidden="true">Close</button>
-	    						<button class="btn btn-primary hide-programme" id="save-programme">Save changes</button>
-						        <a class="popup-close hide-programme" id="hide-programme-button" data-popup-close="popup-programme" href="#">x</a>
-						    </div>
-						</div>
-					</div>
+				<a class="btn btn-info-outline" id="programme-selecter" data-popup-open="popup-programme" href="#">Choose Programme</a>
+				<a class="btn btn-info-outline" id = "memory"> Reset</a>
+				<div class="popup" data-popup="popup-programme">
+				    <div class="popup-inner" id="programme-selector-area">
+				    	<h5>Choose your year of matriculation</h5>
+				    	<select id="AY-choice">click to choose</select>
+				    	<h5>Choose your faculty</h5>
+				        <select id="faculty-choice"></select>
+				        <h5>Choose your department</h5>
+				        <select id="department-choice"></select>
+				        <h5>Choose your programme</h5>
+				        <select id="programme-choice"></select>
+				        <h5>Choose your specialisation</h5>
+				        <select id="specialisation-choice"></select>	
+				        <button class="btn hide-programme" data-dismiss="modal" aria-hidden="true">Close</button>
+    					<button class="btn btn-primary hide-programme" id="save-programme">Save changes</button>	
+				        <a class="popup-close hide-programme" id="hide-programme-button" data-popup-close="popup-programme" href="#">x</a>
+				    </div>
+				</div>
+			</div>
 		</div>
 		<div class="row">
 			<!-- <div class="col-md-1"></div> -->
 			<div class="col-md-3">
 				<div class="logo">
-					<div id="logo-image">NUS<span id='logo-highlight'>PROGRESS</span>BAR</div>
+					<div id="logo-image">NUS<span id='logo-highlight'>PROGRESS</span>BAR ALPHA</div>
 				</div>
 				<div id="module-info">
-					<h2 class="remove-me"> Here is the module information. </h2>
+					<!-- <h2 class="remove-me"> Here is the module information. </h2> -->
 				</div>
 			</div>
 			<div class="col-md-8">
 				<div id="primary-plan">
 					
 					<div id="progress-bar">
-						<h2 class="remove-me-progress-bar"> Here is the progress bar. </h2>
+						<!-- <h2 class="remove-me-progress-bar"> Here is the progress bar. </h2> -->
 					</div>
 					
 					<div id="message-area">
 					</div>
 					<div id="module-table">
-						<h2 class="remove-me-module-table">  Here is the module table. </h2>
+						<!-- <h2 class="remove-me-module-table">  Here is the module table. </h2> -->
 					</div>
 
                     <!--Warning Window-->
