Actually I forgot what I did...

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                     <!--Warning Window-->
 					<div class="popup" id ="warning-popup">
 					    <div class="popup-inner" id="warning-popup-inner">
-                            <h2>Thank you for visiting our website</h2>
-                            <h3>We are still developing it.</h3>
+                            <h2>Welcome to NUSProgressBar</h2>
+                            <h3>We aim to make your module planning easier. More majors and minors will be available soon. As we are still developing this application, you may experience unexpected errors. Please kindly contact us if you discovered any errors.</h3>
                             <button class="popup-close" id="warning-close">Close</button>
 					    </div>
 					</div>
